# AI-Business-Platform

./: .env  .gitignore  AGENTS.md  AI接入旧系统.拓扑.md  CLAUDE.md  README.md  plan.md
ai-gateway/: .dockerignore  .env.example  .gitignore  Dockerfile  DockerfileVPC  alembic.ini  jianzhen_llm.py  pyproject.toml  python2sql.py  remote_deploy.sh  test_dify.py  test_langsmith.py
ai-gateway/alembic/: env.py
ai-gateway/alembic/versions/: 20260427_01_create_llm_prompt_template.py  20260428_01_create_report_intent_dictionary_tables.py
ai-gateway/app/: main.py
ai-gateway/app/api/: dependencies.py
ai-gateway/app/core/: config.py  error_codes.py  model_source.py  mysql.py  resources.py
ai-gateway/app/mcp/: server.py  tools.py
ai-gateway/app/mcp_server/: server.py  tools.py
ai-gateway/app/models/: schemas.py
ai-gateway/app/services/: api_query_execution_graph.py  api_query_fast_intent_router.py  api_query_llm_service.py  api_query_request_schema_gate.py  api_query_response_builder.py  api_query_state.py  api_query_workflow.py  cache_invalidation.py  chat_workflow.py  customer_profile_fixed_service.py  deal_workflow.py  dynamic_ui_service.py  extract_lz_data.py  feature_flags.py  generic_query_executor.py  health_quadrant_llm_service.py  health_quadrant_mysql_pools.py  health_quadrant_repository.py  health_quadrant_service.py  health_quadrant_treatment_repository.py  identity_vault.py  import_function_medicine_mapping_copy1.py  intent_classifier.py  llm_service.py  model_router.py  model_runtime_config_service.py  prompt_template_repository.py  rag_service.py  report_intent_service.py  semantic_cache.py  smart_meal_llm_service.py  smart_meal_package_recommend_service.py  smart_meal_risk_service.py  text2sql_service.py  transcript_extract_service.py  ui_catalog_service.py  ui_snapshot_service.py  ui_spec_guard.py
ai-gateway/app/utils/: __init__.py  json_utils.py  state_path_utils.py  text_utils.py  timing.py
ai-gateway/config/: api_catalog.yaml
ai-gateway/docs/: rag_metrics_table.sql
ai-gateway/resources/: ui_api_endpoints.xlsx
ai-gateway/tests/: conftest.py  test_generic_query_executor_mysql.py  test_main_logging.py  test_meeting_bi_vanna_client.py
ai-gateway/tests/api/: test_api_query_routes.py  test_api_query_routing.py  test_api_query_runtime.py  test_bi_routes.py  test_catalog_governance_routes.py  test_chat_routes.py  test_health_quadrant_route.py  test_mcp_auth.py  test_options_fallback_middleware.py  test_query_routes.py  test_report_intent_route.py  test_smart_meal_package_recommend_route.py  (+3 more)
(+824 files in other folders)
