[project]
name = "ai-gateway"
version = "0.1.0"
description = "AI业务中台 - AI网关服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # AI 编排
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    # MCP 协议
    "fastmcp>=0.4.0",
    # Text2SQL
    "vanna>=0.7.0",
    # 数据库 & 存储
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "pymilvus>=2.4.0",
    "elasticsearch>=8.11.0",
    "neo4j>=5.18.0",
    # 可观测性
    "langsmith>=0.1.0",
    "prometheus-client>=0.21.0",
    # HTTP & 流式
    "httpx>=0.28.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.17",
    # Embedding & Reranker
    "FlagEmbedding>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120
