[project]
name = "ai-gateway"
version = "0.1.0"
description = "AI业务中台 - AI网关服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "alembic>=1.14.0",
    # AI 编排
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    # MCP 协议
    "fastmcp>=0.4.0",
    # Text2SQL
    "vanna>=0.7.0,<=0.7.5",
    "openai>=1.0.0",
    # 数据库 & 存储
    "sqlalchemy>=2.0.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "chromadb>=0.4.0",
    "pysqlite3-binary>=0.5.4; platform_system == 'Linux'",
    "redis>=5.2.0",
    "pymilvus>=2.4.0",
    "elasticsearch>=8.11.0",
    "neo4j>=5.18.0",
    # 可观测性
    "langsmith>=0.1.0",
    "prometheus-client>=0.21.0",
    # HTTP & 流式
    "httpx>=0.28.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.17",
    # Embedding & Reranker（1.3.x 与 transformers>=4.50 不兼容，固定兼容版本范围）
    "FlagEmbedding>=1.2.0,<1.3.0",
    "transformers>=4.44.2,<4.50.0",
    "peft>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120
